prevent scrollbars on scm diff views

--- a/app/assets/stylesheets/scm.css.sass
+++ b/app/assets/stylesheets/scm.css.sass
@@ -127,6 +127,9 @@ table.filecontent
     span
       background: #FFAAAA
 
+  pre
+    overflow: hidden
+
 // 12 different colors for the annonate view
 table.annotate
   tr
